--- a/playground.html
+++ b/playground.html
@@ -15,16 +15,21 @@
     <script src="js/config.js"></script>
     <script src="js/playground.js"></script>
     <script src="js/popover.js"></script>
+    <script src="https://kit.fontawesome.com/9f37ddf547.js"></script>
+    <script src="https://js.pusher.com/6.0/pusher.min.js"></script>
+    <script src="js/chat.js"></script>
 </head>
+
 <body>
     <center>
         <article class="article">
-            <h1 class="article-title" onclick="localStorage.clear(); window.location.replace('index.html')">Paper Bingo</h1>
-            <p class="text-lead" id="room_code">ATY-HTY</p>
+            <h1 class="article-title" onclick="localStorage.clear(); window.location.replace('index.html')">Paper Bingo
+            </h1>
+            <p class="text-lead" id="room_code">
+            </p>
             <div class="row flex-spaces tabs" id="players">
             </div>
     </center>
-
     <div class="row" style="margin-bottom: 0;">
         <div class="progress margin-bottom" id="time">
         </div>
@@ -83,6 +88,19 @@
             <h5 class="modal-subtitle">Modal Subtitle</h5>
             <p class="modal-text">This is an example of modal which is implemented with pure CSS! :D</p>
             <label for="modal-1" class="border endgame">Okk!</label>
+        </div>
+    </div>
+    <input class="modal-state" id="modal-2" type="checkbox">
+    <div class="modal">
+        <label class="modal-bg" for="modal-2"></label>
+        <div class="modal-body chatBox">
+            <label class="btn-close" for="modal-2">X</label>
+            <h4 class="modal-title">Chats</h4>
+            <div class="chats"></div>
+            <div class="form-group send-msg">
+                <input type="text" placeholder="Enter Messege" id="paperInputs1">
+                <button onclick="send()"><i class="far fa-paper-plane"></i></button>
+            </div>
         </div>
     </div>
 </body>
