--- a/playground.html
+++ b/playground.html
@@ -87,7 +87,7 @@
             <h4 class="modal-title">Modal Title</h4>
             <h5 class="modal-subtitle">Modal Subtitle</h5>
             <p class="modal-text">This is an example of modal which is implemented with pure CSS! :D</p>
-            <label for="modal-1" class="border endgame">Okk!</label>
+            <label for="modal-1" class="border">Okk!</label>
         </div>
     </div>
     <input class="modal-state" id="modal-2" type="checkbox">
