--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <center id="intro">
         <article class="article">
             <h1 class="article-title" onclick="localStorage.clear(); window.location.replace('index.html')">Paper Bingo</h1>
-            <p class="article-meta">Painted by <a href="#">Anish</a></p>
             <p class="text-lead">How to play?</p>
             <p>
                 <ul>
@@ -90,6 +89,11 @@
             <label for="modal-1" class="border">Okk!</label>
         </div>
     </div>
+      
+      <div class="footer">
+        <p>Made with &#10084; by Anish Roy</p>
+      </div>
+
 </body>
 
 </html>
