--- a/wait.html
+++ b/wait.html
@@ -26,7 +26,7 @@
                 Bingo</h1>
             <p class="text-lead">Your Room Code</p>
             <p id="room_code"></p>
-            <div class="row">
+            <div class="res-btn">
                 <div class="col-12 col">
                     <button class="btn-block" onclick="copyToClipboard()">Copy Code</button>
                     <a id="share"><button class="btn-block">Share Code</button></a>
